syntax = "proto3";

option go_package ="./pb";

package user;

// ------------------------------------
// Messages
// ------------------------------------

//--------------------------------用户认证授权--------------------------------
message UserLogin {
  int64 id = 1; //id
  string password = 2; //password
  int64 roleLevel = 3; //roleLevel
  string username = 4; //username
  string email = 5; //email
  string coverImageUrl = 6; //coverImageUrl
}

message AddUserLoginReq {
  string password = 1; //password
  string email_code = 2; //email_code
  string username = 3; //username
  string email = 4; //email
  string coverImageUrl = 5; //coverImageUrl
}

message AddUserLoginResp {
}

message UpdateUserLoginReq {
  int64 id = 1; //id
  string password = 2; //password
  int64 roleLevel = 3; //roleLevel
  string username = 4; //username
  string email = 5; //email
  string coverImageUrl = 6; //coverImageUrl
}

message UpdateUserLoginResp {
}

message DelUserLoginReq {
  int64 id = 1; //id
}

message DelUserLoginResp {
}

message GetUserLoginByIdReq {
  int64 id = 1; //id
}

message GetUserLoginByIdResp {
  UserLogin userLogin = 1; //userLogin
}

message SearchUserLoginReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
//  int64 id = 3; //id
//  string password = 4; //password
  int64 roleLevel = 5; //roleLevel
  string username = 6; //username
//  string email = 7; //email
//  string coverImageUrl = 8; //coverImageUrl
  bool order = 9; //order
}

message SearchUserLoginResp {
  repeated UserLogin userLogin = 1; //userLogin
}

message LoginUserReq {
  string email = 1; //email
  string password = 2; //password
}

message LoginWithCodeReq {
  string email = 1; //email
  string email_code = 2; //code
}

message LoginUserResp {
  UserLogin userLogin = 1; //userLogin
  string token = 2; //token
}

message PartialUpdateUserReq {
  int64 id = 1 ; //id
  string password = 2; //password
  int64 roleLevel = 3; //roleLevel
  string username = 4; //username
  string email = 5; //email
  string coverImageUrl = 6; //coverImageUrl
}

message PartialUpdateUserResp {
}

//--------------------------------用户信息--------------------------------
message UserProfile {
  int64 id = 1; //id
  int64 userId = 2; //userId
  string phone = 3; //phone
  string name = 4; //name
  int64 ACCount = 5; //ACCount
  int64 submitCount = 6; //submitCount
  int64 score = 7; //score
  string description = 8; //description
  int64 rating = 9; //rating
  string ACProblem = 10; //中间用竖线隔开
  string school = 11; //school
}

//message AddUserProfileReq {
//  int64 userId = 1; //userId
//  string phone = 2; //phone
//  string name = 3; //name
//  int64 ACCount = 4; //ACCount
//  int64 submitCount = 5; //submitCount
//  int64 score = 6; //score
//  string description = 7; //description
//  int64 rating = 8; //rating
//  string ACProblem = 9; //中间用竖线隔开
//  string school = 10; //school
//}
//
//message AddUserProfileResp {
//}

message UpdateUserProfileReq {
  int64 id = 1; //id
  int64 userId = 2; //userId
  string phone = 3; //phone
  string name = 4; //name
  int64 ACCount = 5; //ACCount
  int64 submitCount = 6; //submitCount
  int64 score = 7; //score
  string description = 8; //description
  int64 rating = 9; //rating
  string ACProblem = 10; //中间用竖线隔开
  string school = 11; //school
}

message UpdateUserProfileResp {
}
//
//message DelUserProfileReq {
//  int64 id = 1; //id
//}
//
//message DelUserProfileResp {
//}

message GetUserProfileByIdReq {
  int64 userId = 1; //user_id
}

message GetUserProfileByIdResp {
  UserProfile userProfile = 1; //userProfile
}

//message SearchUserProfileReq {
//  int64 page = 1; //page
//  int64 limit = 2; //limit
//  int64 id = 3; //id
//  int64 userId = 4; //userId
//  string phone = 5; //phone
//  string name = 6; //name
//  int64 ACCount = 7; //ACCount
//  int64 submitCount = 8; //submitCount
//  int64 score = 9; //score
//  string description = 10; //description
//  int64 rating = 11; //rating
//  string ACProblem = 12; //中间用竖线隔开
//  string school = 13; //school
//}
//
//message SearchUserProfileResp {
//  repeated UserProfile userProfile = 1; //userProfile
//}



// ------------------------------------
// Rpc Func
// ------------------------------------

service user_service{

  //-----------------------用户认证授权-----------------------
  rpc AddUserLogin(AddUserLoginReq) returns (AddUserLoginResp);
  rpc UpdateUserLogin(UpdateUserLoginReq) returns (UpdateUserLoginResp);
  rpc DelUserLogin(DelUserLoginReq) returns (DelUserLoginResp);
  rpc GetUserLoginById(GetUserLoginByIdReq) returns (GetUserLoginByIdResp);
  rpc SearchUserLogin(SearchUserLoginReq) returns (SearchUserLoginResp);
  rpc LoginUser(LoginUserReq) returns (LoginUserResp);
  rpc LoginWithCode(LoginWithCodeReq) returns (LoginUserResp);
  rpc PartialUpdateUser(PartialUpdateUserReq) returns (PartialUpdateUserResp);
  //-----------------------用户信息-----------------------
//  rpc AddUserProfile(AddUserProfileReq) returns (AddUserProfileResp);
  rpc UpdateUserProfile(UpdateUserProfileReq) returns (UpdateUserProfileResp);
//  rpc DelUserProfile(DelUserProfileReq) returns (DelUserProfileResp);
  rpc GetUserProfileById(GetUserProfileByIdReq) returns (GetUserProfileByIdResp);
//  rpc SearchUserProfile(SearchUserProfileReq) returns (SearchUserProfileResp);
